Fixing bug where SVG images were clipping in IE11

--- a/src/styles/services-view.less
+++ b/src/styles/services-view.less
@@ -86,7 +86,7 @@ services-view,
       }
       // so that SVGs are sized correctly in Safari and IE
       img[src$=".svg"] {
-        height: 50px;
+        width: 50px;
       }
     }
 
